# ros2_turtlebot3

./: Docker_jazzy  Dockerfile  README.md  caster_robot.urdf  caster_robot_spec  ros2-humble-base-main.sh  ros2-humble-desktop-main.sh  turtlebot3.repos
ArduinoCode/BTMobileControl/: BTMobileControl.ino
ArduinoCode/Serial_Baudrate_Check/: Serial_Baudrate_Check.ino
ArduinoCode/braccio_ros2/: braccio_ros2.ino
BTMobileControl/: BTMobileControl.ino
BTMobileControl_with_Ultrasonic/: BTMobileControl_with_Ultrasonic.ino
BTMobileControl_with_Ultrasonic_Joystick/: BTMobileControl_with_Ultrasonic_Joystick.ino
BTWheelRobot/: CMakeLists.txt
BTWheelRobot/btwheelrobot/: Common.py
BTWheelRobot/launch/: BTMobile.launch  BTMobile_with_BumpGo.launch
BTWheelRobot/scripts/: BluetoothNode.py  MotorDriverNode.py  UltrasonicSenseNode.py
BTWheelRobot/src/: KeyBoardNode.cpp
RasPiCode/: BTMobileControl.py  SerialComm.py
Serial_Config/: Serial_Config.ino
braccio_arm/: CMakeLists.txt  package.xml
braccio_arm/urdf/: braccio.urdf
braccio_arm_moveit/: .setup_assistant  CMakeLists.txt
braccio_arm_moveit/config/: initial_positions.yaml  visual.srdf  visual.urdf.xacro
braccio_arm_moveit/install/: local_setup.sh  setup.bash
braccio_arm_moveit/install/braccio_arm_moveit/share/ament_index/resource_index/parent_prefix_path/: braccio_arm_moveit
braccio_arm_moveit/install/braccio_arm_moveit/share/braccio_arm_moveit/: package.dsv  package.ps1  package.sh  package.zsh
braccio_arm_moveit/install/braccio_arm_moveit/share/braccio_arm_moveit/launch/: rsp.launch.py  static_virtual_joint_tfs.launch.py
braccio_arm_moveit/launch/: setup_assistant.launch.py
braccio_ros2/: braccio_ros2.ino
building_editor_models/room_with_wall/: model.config  model.sdf
custom_template/my_custom_pkg/: package.xml
custom_template/my_custom_pkg/src/: cpp_node.cpp
log/: latest_list
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: arm_gazebo.launch.xml  my_robot_gazebo.launch.xml
my_robot_description/: package.xml
my_robot_description/launch/: display.launch.xml
my_robot_description/urdf/: camera.xacro  my_robot_gazebo.xacro  standalone_arm.xacro
robot_control/src/bumpgo/: package.xml
robot_control/src/bumpgo/include/: BumpGoNode.hpp
robot_control/src/keyboard_ctrl/: CMakeLists.txt
robot_control/src/keyboard_ctrl/launch/: KeyBoardReceiver.py
robot_control/src/logger/src/: logger_class.cpp  subscriber_class.cpp
ros2_custom_template/my_custom_pkg/: CMakeLists.txt
ros2_custom_template/my_custom_pkg/include/my_custom_pkg/: cpp_header.hpp
ros2_custom_template/my_custom_pkg/my_custom_pkg/: module_to_import.py
ros2_custom_template/my_custom_pkg/scripts/: py_node.py
src/BTWheelRobot/: package.xml
src/BTWheelRobot/btwheelrobot/: BluetoothClass.py  MotorDriverClass.py  UltrasonicSenseClass.py
src/BTWheelRobot/scripts/: BluetoothNode.py  MotorDriverNode.py  UltrasonicSenseNode.py
src/BTWheelRobot/src/: BumpGoNode.cpp
src/WheelRobotControl/wheel_robot_teleop/: CMakeLists.txt  package.xml
src/WheelRobotControl/wheel_robot_teleop/include/wheel_robot_teleop/: keyboarddecode.hpp
src/WheelRobotControl/wheel_robot_teleop/launch/: BTMobile.launch
src/WheelRobotControl/wheel_robot_teleop/scripts/: MobotBluetoothPublishNode.py  MobotReceiveNode.py  MobotUltraSensePublishNode.py
src/WheelRobotControl/wheel_robot_teleop/src/: BumpGoNode.cpp  KeyBoardSendNode.cpp
src/WheelRobotControl/wheel_robot_teleop/wheel_robot_teleop/: BluetoothKey.py  RobotReceiveKey.py  UltrasonicSense.py
src/braccio_arm/launch/: braccio_arm.launch.xml
src/braccio_arm/rviz/: braccio_arm_rviz.rviz
src/braccio_arm/src/: parse_and_publish.cpp
src/braccio_arm/urdf/: braccio.urdf
src/braccio_arm_moveit/config/: ros2_controllers.yaml
src/braccio_arm_moveit/install/: setup.ps1  setup.sh  setup.zsh
src/braccio_arm_moveit/install/braccio_arm_moveit/share/braccio_arm_moveit/: package.bash
src/braccio_arm_moveit/install/braccio_arm_moveit/share/braccio_arm_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  visual.ros2_control.xacro
src/braccio_arm_moveit/install/braccio_arm_moveit/share/braccio_arm_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py
src/braccio_arm_moveit/launch/: demo.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/braccio_description/: CMakeLists.txt  package.xml
src/my_robot_bringup/world/: room_with_walls.world
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/rviz/: arm_urdf_rviz_config.rviz  urdf_rviz_config.rviz
src/my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  mobile_base.xacro  my_robot.xacro
src/robot_control/src/bumpgo/: CMakeLists.txt
src/robot_control/src/bumpgo/src/: BumpGoNode.cpp  bumpgo_main.cpp
src/robot_control/src/keyboard_ctrl/: package.xml
src/robot_control/src/keyboard_ctrl/launch/: KeyBoardReceiverLauncher.py
src/robot_control/src/keyboard_ctrl/src/: KeyBoardReceiveNode.cpp  KeyBoardSendNode.cpp
src/robot_control/src/logger/: CMakeLists.txt  package.xml
src/robot_control/src/logger/src/: logger.cpp  publisher_class.cpp
turtle_control/: setup.py
turtle_control/turtle_control/: turtlebot_auto_drive.py
turtlebot3_custom/: CMakeLists.txt  package.xml
turtlebot3_custom/launch/: navigation2.launch.py  robot_state_publisher.launch.py  simulation.launch.py
