<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>btwheelrobot</name>
  <version>1.0.0</version>
  <description>Wheel Robot Keyboard Control</description>
  <maintainer email="hartagrow@gmail.com">twm</maintainer>
  <license>HartaGrow Property</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
